content updates and color contrast fix

--- a/static/src/style/module/_colors.scss
+++ b/static/src/style/module/_colors.scss
@@ -19,7 +19,7 @@ $neutral: hsla(60, 13.5%, 92.75%, 1); //used in footer bg
 $neutral-dark: hsla(60,  12.7%, 87%, 1); //used for footer bottom
 $button-green: hsla(120, 55.6%, 28.2%, .4);
 $brand-green: hsla(120, 55.6%, 28.2%, 1);
-$brand-green-light: hsla(95.2, 49.5%, 36.5%, 1);
+$brand-green-light: hsla(95.2, 49.5%, 33.5%, 1);
 $brand-green-lighter: hsla(115.4, 21%, 75.7%, 1);
 $brand-red: hsla(4.8, 47.5%, 46.3%, 1);
 $brand-border: hsla(60, 12.7%, 84%, 1); //used for divider lines and form field borders
